crates/bpl/tests/snapshots/test__boogie__Test__snapshots__Snapshots20_v1.snap
---
source: crates/bpl/tests/test.rs
expression: snapshot_report
---
[Parsed]
[
    Proc(
        ProcDecl {
            proc_sign: ProcSign {
                attrs: [
                    Attr(
                        AttrContent {
                            ident: "checksum",
                            params: [
                                String(
                                    StringLit {
                                        text: "0",
                                    },
                                ),
                            ],
                        },
                    ),
                ],
                ident: "M",
                type_params: [],
                var_params: [],
                returns: [],
            },
            specs: [],
            impl_body: None,
        },
    ),
    Impl(
        ImplDecl {
            proc_sign: ProcSign {
                attrs: [
                    Attr(
                        AttrContent {
                            ident: "id",
                            params: [
                                String(
                                    StringLit {
                                        text: "M",
                                    },
                                ),
                            ],
                        },
                    ),
                    Attr(
                        AttrContent {
                            ident: "checksum",
                            params: [
                                String(
                                    StringLit {
                                        text: "1",
                                    },
                                ),
                            ],
                        },
                    ),
                ],
                ident: "M",
                type_params: [],
                var_params: [],
                returns: [],
            },
            impl_body: ImplBody {
                local_vars: [],
                stmt_list: [
                    StructuredCmd(
                        If(
                            IfCmd {
                                guard: Asterisk,
                                then: [
                                    LabelOrCmd(
                                        Call(
                                            CallCmd {
                                                attrs: [],
                                                call_params: CallParams {
                                                    returns: [],
                                                    target: "N",
                                                    params: [],
                                                },
                                                is_async: false,
                                                is_free: false,
                                            },
                                        ),
                                    ),
                                    LabelOrCmd(
                                        Claim(
                                            ClaimCmd {
                                                kind: Assert,
                                                attrs: [],
                                                proposition: Rel(
                                                    RelExpr {
                                                        lhs: Nat(
                                                            "1",
                                                        ),
                                                        op: Neq,
                                                        rhs: Nat(
                                                            "1",
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                ],
                                else_: Some(
                                    Else(
                                        [
                                            LabelOrCmd(
                                                Claim(
                                                    ClaimCmd {
                                                        kind: Assert,
                                                        attrs: [],
                                                        proposition: Rel(
                                                            RelExpr {
                                                                lhs: Nat(
                                                                    "2",
                                                                ),
                                                                op: Neq,
                                                                rhs: Nat(
                                                                    "2",
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ),
                                        ],
                                    ),
                                ),
                            },
                        ),
                    ),
                    LabelOrCmd(
                        Claim(
                            ClaimCmd {
                                kind: Assert,
                                attrs: [],
                                proposition: Rel(
                                    RelExpr {
                                        lhs: Nat(
                                            "3",
                                        ),
                                        op: Neq,
                                        rhs: Nat(
                                            "3",
                                        ),
                                    },
                                ),
                            },
                        ),
                    ),
                ],
            },
        },
    ),
    Proc(
        ProcDecl {
            proc_sign: ProcSign {
                attrs: [
                    Attr(
                        AttrContent {
                            ident: "checksum",
                            params: [
                                String(
                                    StringLit {
                                        text: "3",
                                    },
                                ),
                            ],
                        },
                    ),
                ],
                ident: "N",
                type_params: [],
                var_params: [],
                returns: [],
            },
            specs: [
                Contract(
                    ContractSpec {
                        kind: Ensures,
                        attrs: [],
                        proposition: Rel(
                            RelExpr {
                                lhs: Nat(
                                    "0",
                                ),
                                op: Eq,
                                rhs: Nat(
                                    "0",
                                ),
                            },
                        ),
                        is_free: false,
                    },
                ),
            ],
            impl_body: None,
        },
    ),
]

[Printed]
procedure {:checksum "0"} M();

implementation {:id "M"} {:checksum "1"} M() {
  if (*) {
    call N();
    assert 1 != 1;
  } else {
    assert 2 != 2;
  }
  assert 3 != 3;
}

procedure {:checksum "3"} N();
  ensures 0 == 0;

[Input - ../../vendor/boogie/Test/snapshots/Snapshots20.v1.bpl]
procedure {:checksum "0"} M();

implementation {:id "M"} {:checksum "1"} M()
{
    if (*)
    {
        call N();

        assert 1 != 1;  // error
    }
    else
    {
        assert 2 != 2;  // error
    }

    assert 3 != 3;
}

procedure {:checksum "3"} N();
  ensures 0 == 0;
